# arcana

./: .build.yml  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: cli.rs  config.rs  extract.rs  lib.rs  main.rs  model.rs  normalize.rs  records.rs  subjects.rs
src/commands/: build.rs  config.rs  download.rs  link_local.rs  mod.rs  search.rs
src/commands/link_local/: tests.rs
src/config/: file.rs  path.rs  resolve.rs
src/db/: mod.rs  pragmas.rs  schema.rs
src/download/: api.rs  mod.rs  naming.rs  service.rs  transfer.rs
src/extract/: flatten.rs  mod.rs  reader.rs  shards.rs  tests.rs
src/link_local/: file_info.rs  matcher.rs  mod.rs  scan.rs  service.rs
src/output/: config.rs  download.rs  error.rs  link_local.rs  mod.rs  report.rs  search.rs
src/search/: execute.rs  expand.rs  mod.rs  orchestrate.rs  query.rs  ranking.rs  tests.rs
src/search/expand/: cache.rs  mod.rs  provider.rs
tests/: e2e_cli.rs  real_local_fixture.rs
tests/fixtures/: sample_records.ndjson
