[package]
name = "arcana"
version = "0.1.0"
edition = "2024"
description = "Local archive SQLite search CLI"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
md5 = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"