[package]
name = "arcana"
version = "0.1.0"
edition = "2024"
description = "Local archive SQLite search CLI"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-ng-compat"] }
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simd-json = { version = "0.14", features = ["serde_impl"] }

[dev-dependencies]
tiny_http = "0.12"